# live555-cmake

./: CMakeLists.txt  README.md  win32config
BasicUsageEnvironment/: BasicUsageEnvironment.mak  CMakeLists.txt
UsageEnvironment/: CMakeLists.txt  UsageEnvironment.mak  libUsageEnvironment.lib
WindowsAudioInputDevice/: CMakeLists.txt  WindowsAudioInputDevice.mak
groupsock/: CMakeLists.txt  GroupsockHelper.cpp  groupsock.mak
liveMedia/: CMakeLists.txt  GenericMediaServer.cpp  RTSPClient.cpp  RTSPServer.cpp  liveMedia.mak
mediaServer/: CMakeLists.txt  mediaServer.mak
proxyServer/: CMakeLists.txt  proxyServer.mak
testProgs/: testProgs.mak
